[tool.poetry]
name = "fn_graph_studio"
version = "0.3.2"
description = "A web based explorer for fn_graph function composers"
authors = ["James Saunders <james@businessoptics.biz>"]
license = "MIT"
readme = "README.md"
include = ["fn_graph_studio/styles.css"]
# documentation="https://fn-graph.readthedocs.io/"
repository="https://github.com/BusinessOptics/fn_graph_studio"
homepage="https://github.com/BusinessOptics/fn_graph_studio"

[tool.poetry.dependencies]
python = "^3.7"
pandas = ">=0.25.3"
plotly = "^4.4"
dash = "^1.7"
dash_core_components = "^1.6"
dash_split_pane = "^1.0"
dash_interactive_graphviz = "^0.1.0"
fn_graph = ">=0.5.0"
dash-treebeard = "^0.0.1"
sh = "^1.0"
dash-dangerously-set-inner-html = "^0.0.2"
seaborn = "^0.10.0"
statsmodels = "^0.11.1"
matplotlib = "^3.2.1"

[tool.poetry.dev-dependencies]
black = {version = "^18.3-alpha.0", allow-prereleases = true}

[tool.poetry.scripts]
run_graph_studio = "fn_graph_studio.cli:cli"

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
