[tool.poetry]
name = "fn_graph_studio"
version = "0.10.0"
description = "A web based explorer for fn_graph function composers"
authors = ["James Saunders <james@businessoptics.biz>"]
license = "MIT"
readme = "README.md"
include = ["fn_graph_studio/styles.css"]
documentation="https://fn-graph.readthedocs.io/"
repository="https://github.com/BusinessOptics/fn_graph_studio"
homepage="https://github.com/BusinessOptics/fn_graph_studio"

[tool.poetry.dependencies]
python = "^3.7"
pandas = ">=0.25.3"
plotly = "^4.4"
dash = "^1.7"
dash_core_components = "^1.6"
dash_split_pane = "^1.0"
dash_interactive_graphviz = "^0.2"
fn_graph = {extras = ["examples"], version = "^0.10.1", optional=true}
dash-treebeard = "^0.0.1"
sh = "^1.0"
dash-dangerously-set-inner-html = "^0.0.2"
seaborn = "^0.10.0"
statsmodels = "^0.11.1"
matplotlib = "^3.2.1"
dash-cytoscape = "^0.1.1"
networkx = "^2.4"
dash-ace-persistent = "^0.3.4"
pygments = "^2.6.1"


[tool.poetry.dev-dependencies]
black = {version = "^18.3-alpha.0", allow-prereleases = true}
pylint = "^2.5.2"
rope = "^0.17.0"

[tool.poetry.scripts]
fn_graph_studio = "fn_graph_studio.cli:cli"

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
